Fixed horizontal scrolling issue

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -1,6 +1,5 @@
 .top-header {
     height: 32px;
-    width: 100%;
     background-color: #DDD;
     margin: 0px;
     padding: 4px;
